[gd_scene load_steps=4 format=3 uid="uid://coosbtv7tqexb"]

[ext_resource type="Script" path="res://addons/scripts/main_menu.gd" id="1_68qa7"]
[ext_resource type="AudioStream" uid="uid://bw32kawp3ku45" path="res://addons/sounds/select.wav" id="2_0qsf8"]
[ext_resource type="AudioStream" uid="uid://bt7b1p486r2tw" path="res://addons/sounds/hover.wav" id="3_n3tnk"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_68qa7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_right = 45.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Max Matter"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="ClickSFX" type="AudioStreamPlayer" parent="Control/VBoxContainer/Button"]
stream = ExtResource("2_0qsf8")

[node name="HoverSFX" type="AudioStreamPlayer" parent="Control/VBoxContainer/Button"]
stream = ExtResource("3_n3tnk")

[connection signal="button_down" from="Control/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Control/VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="finished" from="Control/VBoxContainer/Button/ClickSFX" to="." method="_on_audio_stream_player_finished"]
